// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comment editor 1`] = `
"<div><textarea class=\\"form-control\\" placeholder=\\"entry.placeholder\\"></textarea>
  <div class=\\"text-right btn-actions\\"><button class=\\"btn btn-sm btn-primary\\">entry.save_comment</button><button class=\\"btn btn-sm btn-default\\">entry.cancel_edit</button></div>
</div>"
`;

exports[`comment editor with ckeditor 1`] = `
"<div>
  <div><textarea></textarea></div>
  <div class=\\"text-right btn-actions\\"><button class=\\"btn btn-sm btn-primary\\">entry.save_comment</button><button class=\\"btn btn-sm btn-default\\">entry.cancel_edit</button></div>
</div>"
`;
